online magasin færidg

--- a/hudplejeguide.html
+++ b/hudplejeguide.html
@@ -8,7 +8,6 @@
 	<meta name="Skønhed og personlig velvære" content="Skønhed og personlig velvære">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" type="image/x-icon" href=""/>
 </head>
 <body>
     <nav>
@@ -23,7 +22,7 @@
         </ul>
     </nav>
 
-<p><img src="images/infographic.png" alt="infographic" width="1000" height="500" style="vertical-align:right"></p>
+<p><img src="images/infographic.png" alt="infographic" width="1000" height="500" style="vertical-align:middle"></p>
     
     <body style="background-color: #D5E1C9;">
     </body>
